Update Pirate .ipynb

--- a/Code Templates/Pirate .ipynb
+++ b/Code Templates/Pirate .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9b62b2c8",
    "metadata": {
     "scrolled": true
@@ -170,9 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "1442e81c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -187,7 +189,7 @@
     }
    ],
    "source": [
-    "pirates = pirateDataset[1]  \n",
+    "pirates = pirateDataset[0] \n",
     "print(f\"name: {pirate['Name']}\")\n",
     "print(f\"sex: {pirate['Sex']}\")\n",
     "print(f\"ageOfDeath: {pirate['Age of Death']}\")\n",
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "749b8a8d",
    "metadata": {},
    "outputs": [
@@ -206,21 +208,11 @@
      "output_type": "stream",
      "text": [
       "skullAndCrossbones: False\n",
+      "skullAndCrossbones: True\n",
+      "skullAndCrossbones: True\n",
       "skullAndCrossbones: False\n",
       "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
-      "skullAndCrossbones: False\n",
+      "skullAndCrossbones: True\n",
       "skullAndCrossbones: False\n",
       "skullAndCrossbones: False\n",
       "skullAndCrossbones: False\n",
@@ -229,26 +221,72 @@
     }
    ],
    "source": [
-    "skullAndCrossbones = [pirate['Skull and Crossbones'] for pirate in pirateDataset]\n",
-    "for skullAndCrossbones in ('Skull and Crossbones'):\n",
+    "for index, pirate in enumerate(pirateDataset, start=1):\n",
     "    print(f\"skullAndCrossbones: {pirate['Skull and Crossbones']}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4dff052b",
+   "execution_count": 4,
+   "id": "4f989163",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be374466",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Blackbeard\n",
+      "ageOfDeath: 40\n",
+      "skullAndCrossbones: False\n",
+      "====================\n",
+      "name: Anne Bonny\n",
+      "ageOfDeath: 24\n",
+      "skullAndCrossbones: True\n",
+      "====================\n",
+      "name: Calico Jack\n",
+      "ageOfDeath: 37\n",
+      "skullAndCrossbones: True\n",
+      "====================\n",
+      "name: Cheung Po Tsai\n",
+      "ageOfDeath: 39\n",
+      "skullAndCrossbones: False\n",
+      "====================\n",
+      "name: Grace O'Malley\n",
+      "ageOfDeath: 73\n",
+      "skullAndCrossbones: False\n",
+      "====================\n",
+      "name: Mary Read\n",
+      "ageOfDeath: 436\n",
+      "skullAndCrossbones: True\n",
+      "====================\n",
+      "name: Sayyida al Hurra\n",
+      "ageOfDeath: 75\n",
+      "skullAndCrossbones: False\n",
+      "====================\n",
+      "name: Ching Shih\n",
+      "ageOfDeath: 69\n",
+      "skullAndCrossbones: False\n",
+      "====================\n",
+      "name: Sir Francis Drake\n",
+      "ageOfDeath: 56\n",
+      "skullAndCrossbones: False\n",
+      "====================\n",
+      "name: Jean Lafitte\n",
+      "ageOfDeath: 46\n",
+      "skullAndCrossbones: False\n",
+      "====================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, pirate in enumerate(pirateDataset, start=1):\n",
+    "    print(f\"name: {pirate['Name']}\")\n",
+    "#     print(f\"sex: {pirate['Sex']}\")\n",
+    "    print(f\"ageOfDeath: {pirate['Age of Death']}\")\n",
+    "#     print(f\"height: {pirate['Height']}\")\n",
+    "    print(f\"skullAndCrossbones: {pirate['Skull and Crossbones']}\")\n",
+    "    print(\"=\" * 20)"
+   ]
   }
  ],
  "metadata": {
