Update Pirate .ipynb

--- a/Code Templates/Pirate .ipynb
+++ b/Code Templates/Pirate .ipynb
@@ -180,26 +180,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Jean Lafitte\n",
+      "name: Blackbeard\n",
       "sex: Male\n",
-      "ageOfDeath: 46\n",
-      "height: 6.2\n",
+      "ageOfDeath: 40\n",
+      "height: 6.4\n",
       "skullAndCrossbones: False\n"
      ]
     }
    ],
    "source": [
-    "pirates = pirateDataset[0] \n",
-    "print(f\"name: {pirate['Name']}\")\n",
-    "print(f\"sex: {pirate['Sex']}\")\n",
-    "print(f\"ageOfDeath: {pirate['Age of Death']}\")\n",
-    "print(f\"height: {pirate['Height']}\")\n",
-    "print(f\"skullAndCrossbones: {pirate['Skull and Crossbones']}\")"
+    "for index, pirate in enumerate(pirateDataset[:1], start=1):\n",
+    "    print(f\"name: {pirate['Name']}\")\n",
+    "    print(f\"sex: {pirate['Sex']}\")\n",
+    "    print(f\"ageOfDeath: {pirate['Age of Death']}\")\n",
+    "    print(f\"height: {pirate['Height']}\")\n",
+    "    print(f\"skullAndCrossbones: {pirate['Skull and Crossbones']}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "749b8a8d",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4f989163",
+   "id": "36c7cbd2",
    "metadata": {},
    "outputs": [
     {
