--- a/Code Templates/Panda Fundamentals.ipynb
+++ b/Code Templates/Panda Fundamentals.ipynb
@@ -2,30 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "e0fd8ace",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.4.4'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import datetime as dt\n",
-    "pandas.__version__"
+    "# pandas.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "ab0b1fcb",
    "metadata": {},
    "outputs": [
@@ -197,7 +186,7 @@
        "4      Inside Out     14  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "61c978b9",
    "metadata": {},
    "outputs": [
@@ -250,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "a4c00d72",
    "metadata": {},
    "outputs": [
@@ -269,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "cfa0dcdd",
    "metadata": {},
    "outputs": [
@@ -288,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "98951ca7",
    "metadata": {},
    "outputs": [
@@ -312,8 +301,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0cc866ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_data = df.isnull()\n",
+    "fill_values = {}\n",
+    "\n",
+    "numeric_columns = df.select_dtypes(include=['int64', 'float64']).columns\n",
+    "for col in numeric_columns:\n",
+    "    fill_values[col] = df[col].mean()\n",
+    "\n",
+    "\n",
+    "object_columns = df.select_dtypes(include=['object']).columns\n",
+    "for col in object_columns:\n",
+    "    fill_values[col] = df[col].mode()[0]  \n",
+    "    \n",
+    "df.fillna(value=fill_values, inplace=True)\n",
+    "\n",
+    "df.to_csv('output_file.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b494c1c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62c35da5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f797170f",
    "metadata": {},
    "outputs": [],
    "source": []
