--- a/Code Templates/Panda Fundamentals.ipynb
+++ b/Code Templates/Panda Fundamentals.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0cc866ad",
    "metadata": {},
    "outputs": [],
@@ -325,24 +325,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b494c1c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   id               1000 non-null   int64  \n",
+      " 1   sex              1000 non-null   object \n",
+      " 2   age              1000 non-null   float64\n",
+      " 3   height           1000 non-null   float64\n",
+      " 4   weight           1000 non-null   float64\n",
+      " 5   headband         1000 non-null   object \n",
+      " 6   college          1000 non-null   object \n",
+      " 7   tattoos          1000 non-null   int64  \n",
+      " 8   tchests          1000 non-null   int64  \n",
+      " 9   parrots          1000 non-null   object \n",
+      " 10  favorite.pirate  1000 non-null   object \n",
+      " 11  sword.type       1000 non-null   object \n",
+      " 12  eyepatch         1000 non-null   int64  \n",
+      " 13  sword.time       1000 non-null   float64\n",
+      " 14  beard.length     1000 non-null   int64  \n",
+      " 15  fav.pixar        1000 non-null   object \n",
+      " 16  grogg            1000 non-null   int64  \n",
+      "dtypes: float64(4), int64(6), object(7)\n",
+      "memory usage: 132.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "62c35da5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "['male' 'female' 'other']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sexCount = df['sex'].nunique()\n",
+    "sexDetails = df[\"sex\"].unique()\n",
+    "print(sexCount)\n",
+    "print (sexDetails)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f797170f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.35735735735736\n",
+      "29.91671844258051\n"
+     ]
+    }
+   ],
+   "source": [
+    "averageAge = df['age'].mean()\n",
+    "females = df[df['sex'] == 'female']\n",
+    "averageFemaleAge = females['age'].mean()\n",
+    "print (averageAge)\n",
+    "print(averageFemaleAge)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5bfc964f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"weightlb\"] = df[\"weight\"] * 2.2\n",
+    "percent = (df[\"weightlb\"] < 100).mean() * 100\n",
+    "print (percent)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e3a50a5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "shortest = df[\"height\"].idxmin()\n",
+    "shortestId = df.loc[shortest, 'id']\n",
+    "print (shortestId)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "364a6667",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "heaviest = df[\"weight\"].idxmax()\n",
+    "heaviestId = df.loc[heaviest, 'id']\n",
+    "print (heaviestId)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "fa8143d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Inside Out'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"fav.pixar\"].mode()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "7231da80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.658, 1.0)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "averageEyepatch = df[\"eyepatch\"].mean()\n",
+    "medianEyepatch = df[\"eyepatch\"].median()\n",
+    "averageEyepatch, medianEyepatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "5d981ab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '\"1\"'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10056\\1512900279.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"parrots\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"parrots\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0midx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0maverageParrot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"parrots\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '\"1\"'"
+     ]
+    }
+   ],
+   "source": [
+    "# df.loc[35,\"parrots\"] = 1\n",
+    "idx = 0\n",
+    "for i in df[\"parrots\"]:\n",
+    "    df.loc[idx, \"parrots\"] = int(i)\n",
+    "    idx = idx + 1\n",
+    "averageParrot = df[\"parrots\"].mean()\n",
+    "medianParrot = df[\"parrots\"].median()\n",
+    "averageParrot, medianParrot"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f797170f",
+   "id": "ec3555c3",
    "metadata": {},
    "outputs": [],
    "source": []
