--- a/Code Templates/Panda Fundamentals.ipynb
+++ b/Code Templates/Panda Fundamentals.ipynb
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5bfc964f",
+   "id": "a9a8ec8f",
    "metadata": {
     "scrolled": true
    },
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e3a50a5b",
+   "id": "9815a9a2",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "364a6667",
+   "id": "432970a0",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "fa8143d8",
+   "id": "a1a796cf",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "7231da80",
+   "id": "7eed7de0",
    "metadata": {},
    "outputs": [
     {
@@ -518,37 +518,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "5d981ab2",
+   "execution_count": 76,
+   "id": "09e10e87",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '\"1\"'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10056\\1512900279.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"parrots\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"parrots\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0midx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0maverageParrot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"parrots\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '\"1\"'"
-     ]
+     "data": {
+      "text/plain": [
+       "(0.0009940357852882703, 0.0)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df.loc[35,\"parrots\"] = 1\n",
+    "df.loc[35, \"parrots\"] = 1\n",
     "idx = 0\n",
     "for i in df[\"parrots\"]:\n",
     "    df.loc[idx, \"parrots\"] = int(i)\n",
     "    idx = idx + 1\n",
-    "averageParrot = df[\"parrots\"].mean()\n",
-    "medianParrot = df[\"parrots\"].median()\n",
-    "averageParrot, medianParrot"
+    "\n",
+    "averageParrots = df[\"parrots\"].mean()\n",
+    "medianParrots = df[\"parrots\"].median()\n",
+    "averageParrots, medianParrots"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec3555c3",
+   "id": "fae3f83d",
    "metadata": {},
    "outputs": [],
    "source": []
