--- a/Code Templates/Panda Fundamentals.ipynb
+++ b/Code Templates/Panda Fundamentals.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "62c35da5",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "f797170f",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "a9a8ec8f",
    "metadata": {
     "scrolled": true
@@ -421,7 +421,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n"
+      "0.8\n"
      ]
     }
    ],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "9815a9a2",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "432970a0",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "a1a796cf",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "'Inside Out'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "id": "7eed7de0",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "(0.658, 1.0)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,27 +518,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "id": "09e10e87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.0009940357852882703, 0.0)"
+       "(0.6666666666666666, 1.0)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.loc[35, \"parrots\"] = 1\n",
-    "idx = 0\n",
     "for i in df[\"parrots\"]:\n",
-    "    df.loc[idx, \"parrots\"] = int(i)\n",
-    "    idx = idx + 1\n",
+    "    df.loc[35, \"parrots\"] = int(i)\n",
     "\n",
     "averageParrots = df[\"parrots\"].mean()\n",
     "medianParrots = df[\"parrots\"].median()\n",
@@ -547,11 +545,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "fae3f83d",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to function call (2727193694.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\nnguyen31\\AppData\\Local\\Temp\\ipykernel_15104\\2727193694.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    combined_df.drop([\"index\"]), axis = 1, inplace = True)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to function call\n"
+     ]
+    }
+   ],
+   "source": [
+    "newRow = pd.read_csv('PirateNewRow.csv')\n",
+    "combined_df = pd.concat ([df, newRow], ignore_index = True)\n",
+    "combined_df.drop([\"index\"]), axis = 1, inplace = True)\n",
+    "df.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb5207e1",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "newColumn = pd.read_csv('PirateNewColumn')\n",
+    "merged_df = pd.concat (combined_df, newColumn, on =\"id\", how = \"inner\")"
+   ]
   }
  ],
  "metadata": {
