--- a/Final Project/Analysis/Genshin wrangling.ipynb
+++ b/Final Project/Analysis/Genshin wrangling.ipynb
@@ -432,13 +432,13 @@
       " 0   character_name       72 non-null     object\n",
       " 1   rarity               72 non-null     int64 \n",
       " 2   region               69 non-null     object\n",
-      " 3   vision               72 non-null     object\n",
+      " 3   vision               70 non-null     object\n",
       " 4   weapon_type          72 non-null     object\n",
       " 5   model                72 non-null     object\n",
       " 6   constellation        72 non-null     object\n",
       " 7   birthday             72 non-null     object\n",
-      " 8   special_dish         72 non-null     object\n",
-      " 9   affiliation          72 non-null     object\n",
+      " 8   special_dish         69 non-null     object\n",
+      " 9   affiliation          69 non-null     object\n",
       " 10  voice_eng            72 non-null     object\n",
       " 11  voice_cn             72 non-null     object\n",
       " 12  voice_jp             72 non-null     object\n",
@@ -447,7 +447,7 @@
       " 15  ascension            72 non-null     object\n",
       " 16  ascension_specialty  72 non-null     object\n",
       " 17  ascension_talent     72 non-null     object\n",
-      " 18  ascension_boss       72 non-null     object\n",
+      " 18  ascension_boss       70 non-null     object\n",
       " 19  talent_book          72 non-null     object\n",
       " 20  talent_weekly        72 non-null     object\n",
       " 21  hp_90_90             72 non-null     int64 \n",
@@ -576,7 +576,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "6713548b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1042,7 +1044,7 @@
        "      <td>Tall Female</td>\n",
        "      <td>Imperatrix Umbrosa</td>\n",
        "      <td>26-Jun</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>1005</td>\n",
        "      <td>26</td>\n",
@@ -1405,7 +1407,7 @@
        "14                   Cubic Tricks  ...     857       24       41        0.0   \n",
        "15                      Halvamazd  ...     806       23       49        0.0   \n",
        "16                 Swirling Steps  ...    1182       17       56        0.0   \n",
-       "17                           None  ...    1005       26       61        0.0   \n",
+       "17                            NaN  ...    1005       26       61        0.0   \n",
        "18           A Stunning Stratagem  ...    1049       18       51        0.0   \n",
        "19            Heartstring Noodles  ...    1011       24       65        0.0   \n",
        "20                  A Prize Catch  ...    1020       23       63        0.0   \n",
@@ -1461,6 +1463,14 @@
     "five = pd.read_csv(\"fiveStarChar.csv\")\n",
     "five.head(36)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e44b3171",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1479,7 +1489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
